exports[`Button component snapshot renders basic required data 1`] = `
<button
  className="">
  Login
</button>
`;

exports[`Button component snapshot renders empty button 1`] = `
<button
  className="empty_6ajk08">
  Login
</button>
`;
